# Vox

./: Cargo.toml  LICENSE
src/: camera.rs  cube_mesh.rs  frag.glsl  main.rs  mesh.rs  renderer.rs  shaders.rs  transform.rs  vert.glsl  vox.rs  vulkan_renderer.rs
src/renderer/: chunk_mesher.rs  mesh.rs  mod.rs  renderer.rs  staged_buffer.rs  world_render_system.rs
src/renderer/vulkan/: default_lit_pipeline.rs  mod.rs  mvp.rs  vulkan_renderer.rs
src/renderer/vulkan/shaders/: default_lit.frag.glsl  default_lit.vert.glsl
src/shaders/default_lit/: frag.glsl  mod.rs  vert.glsl
src/world/: block.rs  block_position.rs  block_position_range.rs  chunk.rs  direction.rs  mod.rs  world.rs  world_generation_system.rs  world_render_system.rs
