[package]
name = "vox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.36"
vulkano = "0.34.0"
vulkano-shaders = "0.34.0"
glam = "0.25.0"
strum = "0.25.0"
strum_macros = "0.25.3"

[profile.release]
debug = true
